argocd-related/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: argocd-server-ingress
 namespace: argocd
 annotations:
   cert-manager.io/cluster-issuer: letsencrypt-prod
   kubernetes.io/ingressClassName: nginx
   kubernetes.io/tls-acme: "true"
   nginx.ingress.kubernetes.io/ssl-passthrough: "true"
   nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
 ingressClassName: "nginx"
 rules:
   - host: argocd-k8s.anajak-khmer.site
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: argocd-server
               port:
                 name: https
 tls:
   - hosts:
       - argocd-k8s.anajak-khmer.site
     secretName: argocd-secret # do not change, this is provided by Argo CD
